using UnityEngine;
using System;

[Serializable]
public class CreatureForm
{
	public string DisplayName = "New Form";
	public int Tier = 0;
	public Sprite Avatar;
	public GameObject ModelPrefab;
};
